# Skyscope-AI-Agent-Run-Business

./: .env  01-run-first.sh  AGENTS.md  BUILD_AND_RUN_COMPLETE_MACOS_APP.sh  COMMIT_REVIEW.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_SETUP.sh  DEPLOYMENT_INSTRUCTIONS.md  FINAL_COMPLETE_INTEGRATION.py  FREE_AI_FEATURES_GUIDE.md  INTEGRATION_PLAN.md  INTEGRATION_REPORT.md  QUICK_START_FREE_AI.sh  QUICK_START_MINIMAL.sh  README.md  README_COMPLETE_SYSTEM.md  README_PRODUCTION_SYSTEM.md  RUN_COMPLETE_SYSTEM.sh  SETUP_REAL_CRYPTO.py  SYSTEM_STATUS.md  Skyscope Enterprise Suite.spec  agent_swarm_manager.py  ai_client.py  ai_ml_engine.py  analytics_business_intelligence_part2.py  analytics_business_intelligence_part3.py  automated_testing_qa.py  autonomous_income_system.py  autonomous_orchestrator.py  autonomous_website_generator.py  autonomous_zero_capital_deployment.py  blockchain_crypto_integration.py  blockchain_manager.py  code-skyscope-rag1.rtf  code_1753177030057.md  code_1753243006435.txt  code_1753243012207.txt  code_1753243020807.txt  code_1753243028322.txt  code_1753243042191.txt  (+129 more)
.github/: FUNDING.yml
Skyscope-Quantum-AI-Agentic-Swarm/: Skyscope.icns  advanced_agent_orchestration.py  advanced_capabilities_manager.py  affiliate_marketing_manager.py  australian_systems_analyst.py  autonomous_business_operations.py  autonomous_tool_creation.py  business_generator.py  config.py  cpu_miner.py  create_logo.py  documentary_generator.py  (+13 more)
skyscope-core-rs/: Cargo.toml  Dockerfile
skyscope-core-rs/src/: main.rs
skyscope-core-rs/src/integrations/: mod.rs  n8n.rs
(+183 files in other folders)
