[package]
name = "skyscope-core-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28", features = ["bundled"] }
anyhow = "1.0"
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
